public/style/style.css
/* ... */
#changelog .number label.top {
    margin-bottom: 0px;
}
#changelog .number > input {
    width: 85%;
    height: 31px;
    text-align: center;
}
#changelog input[type=submit] {
    background: url("/images/filterbutton.png");
    width: 70px;
    height: 28px;
    border: 0;
    font-weight: bold;
    cursor: pointer;
    font-size: 11px;
    font-family: Tahoma, Segoe UI;
    color: #7b7b7b;
}
#changelog #firstentry, .datatable #firstentry {
    background: #dadada;
    border-top: 2px solid #5597bd;
    border-bottom: 1px solid #adadad;
    height: 41px;
    font-weight: bold;
}
#changelog .date, #changelog .date > div {
    display: inline-block;
}
#changelog a:hover {
    text-decoration: underline;
}
#filter_options select {
    height: 31px;
}
.page-entries .entry, #otherentries .entry {
    width: 100%;
    background: #ededed;
    height: 41px;
    /*height: 38px;*/
    border-bottom: 1px solid #a9a9a9;
}
#changelog {
    /*min-width: 1450px;*/
}
#changelog #otherentries .entry.hidden, #changelog #otherentries .entry.hidden a, #changelog .datatable #otherentries .entry.hidden {
    color: #a5a5a5;
}

#changelog #firstentry > div, #changelog #otherentries .entry > div  {
    box-sizing: content-box;
    height: 0px;
}
#changelog #firstentry > div:not(.profileIcon)  {
    height: 27px;
    float: left;
    padding-top: 12px;
}
#changelog #otherentries .entry > div:not(.profileIcon) {
    height: 41px;
    float: left;
    line-height: 41px;
}
#changelog .date {
    width: 276px;
    padding-left: 20px;
}
#changelog .dateTime {
    width: 152px;
}
#changelog .dateDifference {
    margin-left: 10px;
}
#changelog .profileIcon  {
    padding-top: 3px;
    float: left;
    width: 40px;
}
#changelog .profileIcon img {
    border-radius: 20px;
    margin-right: 15px;
    max-height: 35px;
    /*max-height: 30px;*/
    float: right;
}
#changelog .boardname{
    width: 160px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    margin-right: 30px;
}
#changelog #entries .rank {
    width: 50%;
    float: left;
    /*font-weight: 500;*/
}
#changelog #entries .rank i {
    line-height: 41px;
    font-size: 14px;
}
#changelog .rankImprovement {
    width: 50%;
    float: left;
}
#changelog .time {
    float: right;
    width: 50%;
}
#changelog .map {
    width: 140px;
}
#changelog .chapter {
    width: 135px;
}
#changelog .newscore {
    width: 95px;
    text-align: center;
    padding-right: 27px;
}
#changelog .previousscore {
    width: 100px;
    text-align: center;
    padding-right: 27px;
}
#changelog .improvement {
    width: 103px;
    text-align: center;
    padding-right: 15px;
}
#changelog .worldrecord {
    width: 88px;
}
#changelog .wr {
    background: url("/images/wr.png");
    width: 20px;
    height: 20px;
    margin: 0 auto;
    margin-top: 11px;
}
#changelog .worldrecord {
    text-align: center;
}
#changelog_download {
    float: right;
    margin: 0px 10px 0px 0px;
    font-size: 10px;
    color: #858585;
}
#changelog .morris-hover.morris-default-style, #profile .morris-hover.morris-default-style, #chamber .morris-hover.morris-default-style  {
    text-align: left;
}
#changelog .morris-hover, #profile .morris-hover, #chamber .morris-hover  {
    font-family: Segoe UI;
    font-size: 12px;
    color: #444;
    padding: 10px;
    background: white;
    opacity: 0.95;
     white-space: nowrap;
}
#profile .morris-hover table, #changelog .morris-hover table   {
    font-family: Segoe UI;
    font-size: 12px;
    color: inherit;
    white-space: nowrap;
}
#profile .morris-hover table tr, #changelog .morris-hover table tr   {
    height: 18px;
}
#changelog .morris-hover table td:not(:last-child), #profile .morris-hover table td:not(:last-child) {
    padding-right: 15px;
}
/*#changelog .morris-hover table td > div.players {*/
    /*display: inline-block;*/
    /*text-overflow: ellipsis;*/
    /*overflow: hidden;*/
    /*white-space: nowrap;*/
    /*max-width: 150px;*/
/*}*/
body > #youtube {
    position: fixed;
    top: 0;
    left: calc(50% - 320px);
    width: 640px;
    z-index: 10000;
    box-sizing: content-box;
}
body > #youtube #ytclose {
    width: 20px;
    height: 20px;
    float: right;
    padding-left: 6px;
    padding-top: 2px;
    cursor: pointer;
    color: #888;
    box-sizing: content-box;
}
body > #youtube #ytclose:hover {
    color: #444;
}
body > #youtube #descriptionContainer {
    display: flex;
    width: calc(100% - 2px);
    /*background: url("/images/header_bg.jpg");*/
    background: #eee;
    color: #444;
    border-left: 1px solid #aaa;
    border-right: 1px solid #aaa;
    box-sizing: content-box;
}
body > #youtube #description {
    width: calc(100% - 31px);
    float: left;
    text-align: center;
    /*font-family: Aperture;*/
    line-height: 25px;
    padding-left: 5px;
    font-size: 14px;
    box-sizing: content-box;
}
body > #youtube #ytplayer {
}

#editProfile {
    margin: 20px 0px 0px 22px;
    font-family: Segoe UI;
}
#editProfile .normalcontent {
    font-size: 12px;
    width: 960px;
    padding-bottom: 10px;
}
html[class="dark"] #editProfile .msg {
    color: #ffffff;
}
#donate a {
    font-size: 10px;
    font-weight: bold;
    color: #7c7c7c;
}
.highlight {
    color: #0066cc;;
}
#profile {
    width: 1277px;
    min-height: 300px;
    margin: 30px auto;
    padding: 10px;
    /*overflow: auto;*/
    /*font-family: Segoe UI, Helvetica, sans-serif;*/
    box-sizing: content-box;
}
#profile .userinformation {
    width: 100%;
    color: #FFF;
    height: 280px;
    position: relative;
    font-weight: bold;
    text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
    text-align: center;
}
#profile .userinformation .profilebg {
    background: #c6d7e1;
    height: 100%;
    overflow: hidden;
    position: relative;
}

#profile .userinformation .profilebg.hasavatar img {
    width: 100%;
    position: relative;
    top: -500px;
}
/* ... */

